# kk-slider

./: Cargo.toml  README.md  song_infos.json
src/: errors.rs  lib.rs  main.rs
src/download/: downloader.rs  parser.rs
src/download/parser/: tests.rs
src/download/parser/tests/: happy_path.html
