[package]
name = "kk-slider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
scraper = "0.18"
futures = "0.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror ={ version = "1.0.57"}
